--- a/videos.html
+++ b/videos.html
@@ -7,11 +7,15 @@
     <title>Characters</title>
 </head>
 <body>
-    <ul>
-        <li><a href="index.html"></a></li>
-        <li><a href="characters.html"></a></li>
-        <li><a href="videos.html"></a></li>
-    </ul>
-    <h1></h1>
+    <div class="Home">
+        <h1>Characters</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="characters.html">Characters</a></li>
+            <li><a href="videos.html">Videos</a></li>
+        </ul>
+        <br>
+        <br>
+    </div>  
 </body>
 </html>
