--- a/Brown.html
+++ b/Brown.html
@@ -16,6 +16,10 @@
         </ul>
         <br>
         <br>
-    </div>  
+    </div>
+    <div class="Body">
+        <h1></h1>
+        <p></p>
+    </div>
 </body>
 </html>
