--- a/Van.html
+++ b/Van.html
@@ -19,8 +19,7 @@
     </div>
     <div class="Body">
         <h1>Van</h1>
-        <h2>Van is a robot made by <a href="Tata.html">Tata</a> in Planet TB. He was the one who created BT21 along with Tata and flies him around. Van seems to know everything about the world protects BT21 24/7.</h2>
-        <button><a href="Van 20.html">Van History</a></button>
+        <p>Van is a robot made by <a href="Tata.html">Tata</a> in Planet BT. He was the one who created BT21 along with Tata and flies him around. Van seems to know everything about the world protects BT21 24/7.</p>
     </div>
 </body>
 </html>
