--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <br>
         <br>
     </div>  
+    <h2>To do voice over, you can go to accessibiliy and then voice over.</h2>
         <div class="Characters">
             <div class="Set1">
                 <a href="Van.html"><img src="Van.webp"></a>
