--- a/Tata.html
+++ b/Tata.html
@@ -19,8 +19,7 @@
     </div>
     <div class="Body">
         <h1>Tata</h1>
-        <h2>Tata is the prince of Planet TB where it is filled with love! Tata's family used there power to spread love. He has 2 brothers, Tutu and Titi. Everyone royal family member uses there powers to make the planet have happiness but Tata believed that you cannot spread love with magic but with your heart. His family members never understood him. Titi said that he never made sense. So he ran away with <a href="Van.html">Van</a>.</h2>
-        <button><a href="Tata 20.html">Tata History</a></button>
+        <p>Tata is the prince of Planet BT where it is filled with love! Tata's family used there power to spread love. He has 2 brothers, Tutu and Titi. Everyone royal family member uses there powers to make the planet have happiness but Tata believed that you cannot spread love with magic but with your heart. His family members never understood him. Titi said that he never made sense. So he ran away with <a href="Van.html">Van</a>.</p>
     </div>
 </body>
 </html>
