--- a/Brown.html
+++ b/Brown.html
@@ -18,8 +18,8 @@
         <br>
     </div>
     <div class="Body">
-        <h1></h1>
-        <p></p>
+        <h1>Brown</h1>
+        <p>Brown, he seems he doesn’t care much. But, he has a shoulder to share and has a big heart to hear you. He loves <a href="Cony.html">Cony</a> who is full of energy,  and always there for his little sister <a href="Brownie.html">Brownie</a>!</p>
     </div>
 </body>
 </html>
