--- a/Brownie.html
+++ b/Brownie.html
@@ -18,8 +18,9 @@
         <br>
     </div>
     <div class="Body">
-        <h1></h1>
-        <p></p>
+        <h1>Brownie</h1>
+        <p>Sweet, lovely Cjoco who loves sweets! She is shy like her brother BROWN. But, once you get to know her, she gets along well even with <a href="Brown.html">Brown's</a> friends. She's also a great fashionista!
+        </p>
     </div>
 </body>
 </html>
