--- a/Cony.html
+++ b/Cony.html
@@ -18,8 +18,8 @@
         <br>
     </div>
     <div class="Body">
-        <h1></h1>
-        <p></p>
+        <h1>Cony</h1>
+        <p>Cony, she is bright, cheerful and full of passion. She gets super excited when she's with her beloved <a href="Brown.html">Brown</a>.</p>
     </div>
 </body>
 </html>
