--- a/Sally.html
+++ b/Sally.html
@@ -18,8 +18,8 @@
         <br>
     </div>
     <div class="Body">
-        <h1></h1>
-        <p></p>
+        <h1>Sally</h1>
+        <p>Sally with her unexpected charm! Cute little Sally brings joy to her friends with full of bright and wild ideas. Don’t be fooled by her cuteness. She might reveal other side of her you’ve never expected!</p>
     </div>
 </body>
 </html>
