--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <a href="Mang.html"><img src="Mang.webp"></a>
             </div>
             <div class="Set3">
-                <a href="Koya.webp"><img src="Koya.webp"></a>
-                <a href="Cooky.webp"><img src="Cooky.webp"></a>
+                <a href="Koya.html"><img src="Koya.webp"></a>
+                <a href="Cooky.html"><img src="Cooky.webp"></a>
                 <a href="Chimmy.html"><img src="Chimmy.webp"></a>
             </div>
             <div class="Set4">
