--- a/Cooky.html
+++ b/Cooky.html
@@ -18,8 +18,8 @@
         <br>
     </div>
     <div class="Body">
-        <h1></h1>
-        <p></p>
+        <h1>Cooky</h1>
+        <p>Cooky had 2 friends, Jooky and Ian. They were the best of friends and they dreamed of becoming boxers. They trianed every day to get stronger. The week before the tournament, they had found out that Ian had to go against his own friend, Jooky. They weren't worried though, after all, they knew that they weren't gonna hurt each other that bad. After all, they were friends. That night, it was the full moon, than Ian turned into a wolverine self! He was bad now. Then when he turned nice again, he realized what he had done. He ran away so he could protect Cooky and Jooky. But Cooky nor Jooky knew this so they stopped him and pleaded him to come back. Ian took one last chance and hoped he wouldn't hurt anyone. Then when Ian went against Jooky, his evilness took over and knocked Jooky unconsiouce. Jooky went to the hospital and when Ian awoke from his evilness, he realized what he had done once again and left. There he met Cheif and formed At21 with other outcased members. Still, not knowing Ian's side of the story, Cooky tried to find him for years and still does as a Bt21 member.</p>
     </div>
 </body>
 </html>
