--- a/Koya.html
+++ b/Koya.html
@@ -18,8 +18,8 @@
         <br>
     </div>
     <div class="Body">
-        <h1></h1>
-        <p></p>
+        <h1>Koya</h1>
+        <p>Koya was a sleepy kind koala. Bt21 was looking for a new member of there group. They had <a href="Van.html">Van</a> spy on Koya to make sure he was a kind hearted koala. He interviewed some of his friends who said that Koya was a very calm sleepy koala. He decided to watch him a little more. When he knew he was good for Bt21, they sucked him up in the space alein ship where he met the rest of Bt21.</p>
     </div>
 </body>
 </html>
