--- a/RJ.html
+++ b/RJ.html
@@ -18,8 +18,8 @@
         <br>
     </div>
     <div class="Body">
-        <h1></h1>
-        <p></p>
+        <h1>RJ</h1>
+        <p>RJ was from alpaca planet. It was the day before sheeping day and every alpaca knew that RJ hated sheeping day. RJ was like a nice fluffy naive alpaca, but he had a secret. When he got dirty, he has a dark side. He would turn brown and be evil until he gets cleaned. RJ didn't want to harm anyone on Alpaca Land so I left only leaving a note that said I will miss you to his family. While he was running, a space alien car picked him up and there he found <a href="Tata.html">Tata</a> and <a href="Van.html">Van</a>. Then he joined Bt21 and they kepped him happy.</p>
     </div>
 </body>
 </html>
