--- a/characters.html
+++ b/characters.html
@@ -16,6 +16,91 @@
         </ul>
         <br>
         <br>
+    </div>
+    <div class="Info">
+        <div class="Quick">
+            <img src="RJ.webp">
+            <div class="Words">
+                <h1>RJ</h1>
+                <h2>Sheep</h2>
+                <p>RJ loves to both cook and eat. RJ's fluffy fur and warm heart makes everyone feel they're at home. #greetings #gentlesoul #parka #omnomnom</p>
+                <button><a href="RJ.html">More</a></button>
+            </div>
+        </div>
+        <div class="Quick">
+            <div class="Words">
+                <h1>Chimmy</h1>
+                <h2>Dog</h2>
+                <p>Chimmy enjoys wearing a yellow hoodie and is born with a passion to work hard on everything, no matter what. #passion #workhard #playhard #harmonica #yellowhoodie</p>
+                <button><a href="Chimmy.html">More</a></button>
+            </div>
+                <img src="Chimmy.webp">
+        </div>
+        <div class="Quick">
+            <img src="Cooky.webp">
+            <div class="Words">
+                <h1>Cooky</h1>
+                <h2>Bunny</h2>
+                <p>Cooky hopes to break out of the stereotypes from the cherubic appearance and become tough. #unbalanced #eyebrows #heartbutt #imaginarymuscles</p>
+                <button><a href="Cooky.html">More</a></button>
+            </div>
+
+        </div>
+        <div class="Quick">
+            <div class="Words">
+                <h1>Tata</h1>
+                <h2>Heart</h2>
+                <p>Prince TATA from planet BT has a super stretchy body as well as super natural powers. #PlanetBT #offthewall #superpowers #Prince</p>
+                <button><a href="Tata.html">More</a></button>
+            </div>
+
+            <img src="Tata.webp">
+        </div>
+        <div class="Quick">
+            <img src="Koya.webp">
+            <div class="Words">
+            <h1>Koya</h1>
+            <h2>Koala</h2>
+            <p>Exceptionally bright and talented KOYA. Sleeping cutie full of thoughts and thoughts of sleeping. #talented #pillow #droopyeyes #removeableears</p>
+            <button><a href="Koya.html">More</a></button>
+            </div>
+        </div>
+        <div class="Quick">
+            <div class="Words">
+            <h1>Shooky</h1>
+            <h2>Cookie</h2>
+            <p>Tiny SHOOKY loves jokes, especially ones on friends. Milk is what SHOOKY hates the most. #fun #manyfaces #mini #crunchysquad</p>
+            <button><a href="Shooky.html">More</a></button>
+        </div>
+            <img src="Shooky.webp">
+        </div>
+        <div class="Quick">
+            <img src="Mang.webp">
+            <div class="Words">
+            <h1>Mang</h1>
+            <h2>Mystery</h2>
+            <p>When dancing, MANG is cooler than ever. Veiled under mask, MANG's true identity remains a secret. #heartshapednose #mask #mystery #BestDancer</p>
+            <button><a href="Mang.html">More</a></button>
+            </div>
+
+        </div>
+        <div class="Quick">
+            <div class="Words">
+            <h1>Van</h1>
+            <h2>Robot</h2>
+            <p>VAN who seems to know everything about the world protects BT21 24/7. #guardian #vehicle #transformation #robot</p>
+            <button><a href="Van.html">More</a></button>
+            </div>
+            
+            <img src="Van.webp">
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="bottom">
+            <button><a href="LineFriends.html">See Line Friends</a></button>
+        </div>
+
     </div>  
 </body>
 </html>
