--- a/LineFriends.html
+++ b/LineFriends.html
@@ -50,7 +50,8 @@
         <div class="Quick">
             <div class="Words">
                 <h1>Brownie</h1>
-                <h2>Brownie is a top fashonista who is always in style! She has the big brother Brown and is very friendly! She gets along with everyone.</p>
+                <h2>Bear</h2>
+            <p>Brownie is a top fashonista who is always in style! She has the big brother Brown and is very friendly! She gets along with everyone.</p>
                 <button><a href="Brownie.html">More</a></button>
             </div>
 
