--- a/characters.html
+++ b/characters.html
@@ -23,7 +23,7 @@
             <img src="RJ.webp">
             <div class="Words">
                 <h1>RJ</h1>
-                <h2>Sheep</h2>
+                <h2>Alpaca</h2>
                 <p>RJ loves to both cook and eat. RJ's fluffy fur and warm heart makes everyone feel they're at home. #greetings #gentlesoul #parka #omnomnom</p>
                 <button><a href="RJ.html">More</a></button>
             </div>
