--- a/Mang.html
+++ b/Mang.html
@@ -19,7 +19,7 @@
     </div>
     <div class="Body">
         <h1>Mang</h1>
-        <p>Mang is a great dancer and performer but, before he was all this, he was a great dancer but a shy animal. His favorite all time dancer champion Conn came to him. He told him that if he performed he could be great. But Mang was to scared that people would laugh at him so Conn gave him a donkey mask. We still don't really know what animal Mang is, but he walked up to the stage after his opponent Gwang went and when he stepped on stage everyone started murmuring, "How do you dance with a mask?". When he started dancing, he was amazing! At the end of the dance, Gwang won but he was sucked up by a space alien ship and became a part if Bt21.</p>
+        <p>Mang is a great dancer and performer but, before he was all this, he was a great dancer but a shy animal. His favorite all time dancer champion Conn came to him. He told him that if he performed he could be great. But Mang was to scared that people would laugh at him so Conn gave him a donkey mask. We still don't really know what animal Mang is, but he walked up to the stage after his opponent Gwang went and when he stepped on stage everyone started murmuring, "How do you dance with a mask?". When he started dancing, he was amazing! At the end of the dance, Gwang won then Mang was sucked up by a space alien ship and became a part if Bt21.</p>
     </div>
 </body>
 </html>
