--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
     </div>  
         <div class="Characters">
             <div class="Set1">
-                <a href="Van.html"><img src="Van.webp"></a>
-                <a href="Tata.html"><img src="Tata.webp"></a>
-                <a href="Shooky.html"><img src="Shooky.webp"></a>
+                <a href="Van.html"><img aria-label="Van" src="Van.webp"></a>
+                <a href="Tata.html"><img aria-label="Tata" src="Tata.webp"></a>
+                <a href="Shooky.html"><img aria-label="Shooky" src="Shooky.webp"></a>
             </div>
             <div class="Set2">
-                <a href="Sally.html"><img src="Sally.webp"></a>
-                <a href="RJ.html"><img src="RJ.webp"></a>
-                <a href="Mang.html"><img src="Mang.webp"></a>
+                <a href="Sally.html"><img aria-label="Sally" src="Sally.webp"></a>
+                <a href="RJ.html"><img aria-label="RJ" src="RJ.webp"></a>
+                <a href="Mang.html"><img aria-label="Mang" src="Mang.webp"></a>
             </div>
             <div class="Set3">
-                <a href="Koya.html"><img src="Koya.webp"></a>
-                <a href="Cooky.html"><img src="Cooky.webp"></a>
-                <a href="Chimmy.html"><img src="Chimmy.webp"></a>
+                <a href="Koya.html"><img aria-label="Koya" src="Koya.webp"></a>
+                <a href="Cooky.html"><img aria-label="Cooky" src="Cooky.webp"></a>
+                <a href="Chimmy.html"><img aria-label="Chimmy" src="Chimmy.webp"></a>
             </div>
             <div class="Set4">
-                <a href="Brown.html"><img src="Brown.webp"></a>
-                <a href="Brownie.html"><img src="Brownie.webp"></a>
-                <a href="Cony.html"><img src="Cony.webp"></a>
+                <a href="Brown.html"><img aria-label="Brown" src="Brown.webp"></a>
+                <a href="Brownie.html"><img aria-label="Brownie" src="Brownie.webp"></a>
+                <a href="Cony.html"><img aria-label="Cony" src="Cony.webp"></a>
             </div>
         </div>
 </body>
