--- a/Brownie.html
+++ b/Brownie.html
@@ -18,8 +18,9 @@
         <br>
     </div>
     <div class="Body">
-        <h1>Brownie</h1>
-        <p>Sweet, lovely Cjoco who loves sweets! She is shy like her brother BROWN. But, once you get to know her, she gets along well even with <a href="Brown.html">Brown's</a> friends. She's also a great fashionista!
+        <iframe width="560" height="315" aria-label="Choco" src="https://www.youtube.com/embed/dyvgEUz6jgo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>Choco</h1>
+        <p>Sweet, lovely Choco who loves sweets! She is shy like her brother BROWN. But, once you get to know her, she gets along well even with <a href="Brown.html">Brown's</a> friends. She's also a great fashionista!
         </p>
     </div>
 </body>
