--- a/Chimmy.html
+++ b/Chimmy.html
@@ -18,6 +18,7 @@
         <br>
     </div>
     <div class="Body">
+        <iframe width="560" height="315" aria-label="Chimmy" src="https://www.youtube.com/embed/73AhZcf1HUw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>Chimmy</h1>
         <p>Chimmy was abandoned from his owner. When he crawlred out of the box, he found a Harmonica in there as well. He didn't know what it was though so he smelled and blew. The noise startled him as he jumped back in surprise. Soon he was an amazing harmonica player. He made little people out of trash and pretended to play for them but everytime something happened like the wind or something. Then on Chirstmas day, he built snowmen and played around for them. But he bumped into one and it broke. He was sad. Then he blew the harmonica once again and this time when he looked next to him, he saw a heart shaped creature. His name was <a href="Tata.html">Tata</a>. Tata clapped as he enjoyed the music. He decided to take Chimmy with him and he was the first member of Bt21.</p>
     </div>
