--- a/Shooky.html
+++ b/Shooky.html
@@ -18,6 +18,8 @@
         <br>
     </div>
     <div class="Body">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kVgVn8s_XEA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fbFl02XYD3E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>Shooky</h1>
         <p>Shooky was from a video game where is grandpa made the best cookies. One day he fell sick and Shooky had to help him. Grandpa said to find another chef to help him cook and Shooky tried but he couldn't then, a alien space ship took him up where he met the characters of Bt21. They helped heal the grandpa and then he joined bt21!</p>
     </div>
