--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Characters</h1>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="characters.html">Characters</a></li>
+            <li><a href="characters.ht-ml">Characters</a></li>
             <li><a href="videos.html">Videos</a></li>
         </ul>
         <br>
